recursion.lessons.recursion.tree.Tree.scala.error
Tree:51: error: not found: value tree
		tree(getParam(0).asInstanceOf[Int],getParam(1).asInstanceOf[Double],
                ^