recursion.lessons.recursion.tree.Tree.scala.code
droite(90);
    leveCrayon();
    avance(50);
    baisseCrayon();
    cercle(50);
    leveCrayon();
    recule(100);
    baisseCrayon();
    cercle(50);
    gauche(90);
    leveCrayon();
    avance(50);
    baisseCrayon();
    avance(220);
    for(i <- 1 to 90)
    {
        avance(1);
        droite(1.004);
    }
    droite(90);
    avance(20);
    recule(20);
    gauche(90);
    for(i <- 1 to 90)
    {
        avance(1);
        droite(1.004);
    }
    droite(90);
    avance(110);
    recule(110);
    gauche(90);
    avance(220); 